# dice-game

./: .gitignore  README.md  default.nix
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs  user.rs
server/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  build.rs
server/migrations/2019-08-31-184528_create_users/: up.sql
server/migrations/2019-09-07-200209_users/: up.sql
server/migrations/2019-09-07-205908_games/: up.sql
server/migrations/2019-09-07-215444_rounds/: down.sql  up.sql
server/src/: main.rs  models.rs  schema.rs  user.rs
