[package]
name = "client"
version = "0.1.0"
authors = ["Nils ANDRÉ-CHANG <nils.andre.chang@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
pancurses = "0.16"
sha3 = "0.9"
clap = "2"
