[package]
name = "server"
version = "0.1.0"
authors = ["Nils ANDRÉ-CHANG <nils.andre.chang@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["sqlite_pool", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
