[package]
name = "server"
version = "0.1.0"
authors = ["Nils ANDRÉ-CHANG <nils.andre.chang@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["diesel_postgres_pool", "json"] }
diesel = { version = "1.0.0", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
