[package]
name = "server"
version = "0.1.0"
authors = ["Nils ANDRÉ-CHANG <nils.andre.chang@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
rocket = { version = "0.4", default-features = false }
rocket_contrib = { version = "0.4", default-features = false, features = ["diesel_postgres_pool", "json"] }
diesel = { version = "1", features = ["postgres"] }
diesel_migrations = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.7"
base64 = "0.13"

[build-dependencies]
diesel_cli = { version = "1", default-features = false, features = ["postgres"] }
walkdir = "2"
